>container
    >menu-section
>tabs
    >#home
        +update-view
        +default-view
        +login-view       ( !!!should set "display: none;" under "menu-section )
    >#settings
    >#chat
    >#info