@@ -401,22 +401,93 @@
                         </div>
                     </div>
                     <div class="chat-right-pane">
-                        <div class="chat-info-box">
-                            <div class="head-text">
-                                <!--<img src="./assets/images/exclamation-mark.png" alt="" id="p">-->
-                                <h1>Let us know what's your issue</h1>
+
+                        <div class="chat-token-selection-view">
+                            <h6 class="head-chats">Tickets</h6>
+                            <button class="continue"><img src="./assets/images/next.png" alt="" width="20px" height="20px"></button>
+                            <div class="tickets">
+
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+                                <div class="ticket">
+                                    <div class="ticket-info">
+                                        <h4>ED203KX</h4>
+                                        <h6>Trouble of connections</h6>
+                                    </div>
+                                    <div class="alert">x</div>
+                                    <button class="close-btn"><img src="./assets/images/close.png" alt="" width="20px" height="20px"></button>
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <div class="chat-selection-view">
+
+                            <div class="chat-info-box">
+                                <div class="head-text">
+                                    <!--<img src="./assets/images/exclamation-mark.png" alt="" id="p">-->
+                                    <h1>Let us know what's your issue</h1>
+                                </div>
+    
+                                <h6>Please select the headline given below that related to your issue</h6>
+                            </div>
+                            <div class="chat-selection-box">
+                                <button class="chat-heading">Not showing any data</button>
+                                <button class="chat-heading">Auto bootup issues</button>
+                                <button class="chat-heading">OC - issues</button>
+                                <button class="chat-heading">Transaction issues</button>
+                                <button class="chat-heading">Trouble of connections</button>
+                                <button class="chat-heading">Other</button>
                             </div>
 
-                            <h6>Please select the headline given below that related to your issue</h6>
                         </div>
-                        <div class="chat-selection-box">
-                            <button class="chat-heading">Not showing any data</button>
-                            <button class="chat-heading">Auto bootup issues</button>
-                            <button class="chat-heading">OC - issues</button>
-                            <button class="chat-heading">Transaction issues</button>
-                            <button class="chat-heading">Trouble of connections</button>
-                            <button class="chat-heading">Other</button>
-                        </div>
+
                     </div>
                 </div>
                 <div class="tab setting-page" id="info">
